--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
 <!--			<version>5.3.2</version>-->
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>RELEASE</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
